WIP - Bug Squashing

--- a/app/assets/stylesheets/tic-tac-toe.css
+++ b/app/assets/stylesheets/tic-tac-toe.css
@@ -1,19 +1,72 @@
 body {
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 10px;
+}
 
+h1 {
+  font-family: 'Cabin Sketch', sans-serif;
+  font-size: 10em;
+  text-align: center;
+}
+
+h3 {
+  font-size: 2.5em;
+  padding-bottom: 1em;
+}
+
+.game-stats, .game-board {
+  margin: auto;
+}
+
+/*Score Styles*/
+
+.game-stats {
+  text-align: center;
+  width: 400px;
+}
+
+.game-stats div {
+  float: left;
+  width: 200px;
+}
+
+.game-stats span {
+  font-size: 5em;
 }
 
 /*Game Styles*/
 
+#box1, #box7 {
+  border-left: 5px black solid;
+  border-right: 5px black solid;
+}
+
+#box4 {
+  border: 5px black solid;
+}
+
+#box3, #box5 {
+  border-bottom: 5px black solid;
+  border-top: 5px black solid;
+}
+
+.game-board {
+  clear: both;
+  /*Avoiding inline-block spacing issues*/
+  font-size: 0;
+  padding-top: 30px;
+  width: 310px;
+}
+
 .square {
-  background: red;
+  cursor: pointer;
   display: inline-block;
   height: 100px;
-  margin: 10px;
   width: 100px;
 }
 
 .computer {
-  background: green;
+  background: red;
 }
 
 .player {
